syntax = "proto3"; // 协议版本

// 选项配置
option java_package = "cn.cocowwy.grpcserver.api";
option java_outer_classname = "GRPCServerApi";
option java_multiple_files = true;

// 定义包名
package cn.cocowwy.grpcserver.api;

// 定义服务类型：服务接口.定义请求参数和相应结果
service RPCDateService {
  rpc getDate (RPCDateRequest) returns (RPCDateResponse) {
  }
}

// 定义请求体（即我们发送出去的请求数据的数据类型，由1递增）
message RPCDateRequest {
  int32 id = 1;
  string userName = 2;
  string message = 3;
  int32 age = 4;
}

// 定义相应内容（即定义我们接收请求数据的数据类型）
message RPCDateResponse {
  string serverDate = 1;
}

// 生成文件 在Demos文件夹下执行 mvn compile即可